fix: align all report sections to the left

--- a/frontend/src/scss/report-section.scss
+++ b/frontend/src/scss/report-section.scss
@@ -3,7 +3,7 @@
 .textbox {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 p.text {
